--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
-
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='utf-8'?>
 <resources>
     <string name="app_name">Mia Healthcare Consent Form</string>
     <string name="title_activity_main">Mia Healthcare Consent Form</string>
     <string name="package_name">com.miahealthcare.consentform</string>
-    <string name="custom_url_scheme">app</string>
+    <string name="custom_url_scheme">com.miahealthcare.consentform</string>
 </resources>
